# rneovim

./: .gitignore  ARCHITECTURE.md  COMMANDS.md  Cargo.toml  DOCUMENT.md  GEMINI.md  README.md  TASKS.md  build.rs  mock_lsp.py  sample.txt
src/: lib.rs  main.rs  os_terminal.c  test_mlua.rs
src/nvim/: api.rs  buffer.rs  charset.rs  diff.rs  error.rs  eval.rs  extmark.rs  keymap.rs  lsp.rs  math.rs  memfile.rs  memline.rs  mod.rs  regexp.rs  request.rs  session.rs  shada.rs  spell.rs  state.rs  strings.rs  syntax.rs  terminal.rs  treesitter.rs  undo.rs  window.rs
src/nvim/event/: event_loop.rs  key_processor.rs  mod.rs
src/nvim/handlers/: cmdline.rs  edit.rs  mod.rs  motion.rs  state.rs  window.rs
src/nvim/lua/: api.rs  diagnostic.rs  mod.rs  treesitter.rs  util.rs  uv.rs
src/nvim/msgpack_rpc/: mod.rs
src/nvim/os/: fs.rs  time.rs
src/nvim/ui/: grid.rs
tests/: buffer_api_test.rs  command_test.rs  compare_with_nvim.sh  ex_command_test.rs  lsp_integration_test.rs  mbyte_test.rs  multilang_test.rs  nvim_compat_test.rs  session_test.rs  shada_test.rs  state_machine_test.rs  test_ciw_undo.sh  test_ciw_undo_x.sh  undo_persistence_test.rs
