[package]
name = "rneovim"
version = "0.1.0"
edition = "2021"

[lib]
name = "rneovim"
path = "src/lib.rs"

[[bin]]
name = "rneovim"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
mlua = { version = "0.11.6", features = ["luajit", "vendored"] }
notify = "8.2.0"
regex = "1.12.3"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.4.4"
tree-sitter = "0.20.10"
unicode-width = "0.2.0"
unicode-bidi = "0.3.15"
dirs = "6.0.0"
